[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Medieval Sharp/MedievalSharp-Book.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/tema_1.tres" type="Theme" id=3]
[ext_resource path="res://audio/hud/button-24.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Settings_Menu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.2, 0.2, 0.694118 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 882.0
margin_top = 420.0
margin_right = 1038.0
margin_bottom = 659.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 59.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 156.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="Options_pause" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 156.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 156.0
margin_bottom = 239.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 1 )
stream = ExtResource( 4 )
bus = "UI"

[node name="Settings_Menu" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options_pause" to="." method="_on_Options_pause_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
